added mergekit-extract-lora instructions in the readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ mergekit-layershuffle = "mergekit.scripts.layershuffle:main"
 bakllama = "mergekit.scripts.bakllama:main"
 mergekit-moe = "mergekit.scripts.mixtral_moe:main"
 mergekit-tokensurgeon = "mergekit.scripts.tokensurgeon:main"
+mergekit-extract-lora = "mergekit.scripts.extract_lora:main"
 
 [tool.setuptools]
 packages = [
